[package]
name = "snake-term"
version = "2.0.0"
edition = "2021"
description = "A compact, configurable, terminal-based Snake game written in Rust"

[dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
